# qgym

./: .gitignore  .gitmodules  CMakeLists.txt  COMPLETED_mapping_qubits.ipynb  COMPLETED_scheduling_operations.ipynb  CONTRIBUTING.md  EMPTY_mapping_qubits.ipynb  EMPTY_scheduling_operations.ipynb  LICENSE  README.md  TODO  old_setup.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  stub.py  workflow_requirements.txt
.github/workflows/: black.yml  build.yml  compatibility.yml  isort.yml  mypy.yml  pylint.yml  quality.yml  release.yml  sphinx.yml  style.yml
docs/: .buildinfo  conf.py  conf.py_t  genindex.html  index.html  objects.inv  package.rst_t  py-modindex.html  qgym.custom_types.html  qgym.envs.html  qgym.envs.initial_mapping.html  qgym.envs.initial_mapping.initial_mapping.html  qgym.envs.initial_mapping.initial_mapping_rewarders.html  qgym.envs.initial_mapping.initial_mapping_state.html  qgym.envs.initial_mapping.initial_mapping_visualiser.html  qgym.envs.routing.html  qgym.envs.routing.routing.html  qgym.envs.routing.routing_rewarders.html  qgym.envs.routing.routing_state.html  qgym.envs.routing.routing_visualiser.html  qgym.envs.scheduling.html  qgym.envs.scheduling.machine_properties.html  qgym.envs.scheduling.rulebook.html  qgym.envs.scheduling.scheduling.html  qgym.envs.scheduling.scheduling_dataclasses.html  qgym.envs.scheduling.scheduling_rewarders.html  qgym.envs.scheduling.scheduling_state.html  qgym.envs.scheduling.scheduling_visualiser.html  qgym.generators.circuit.html  qgym.generators.graph.html  qgym.generators.html  qgym.generators.interaction.html  qgym.html  qgym.spaces.box.html  qgym.spaces.dict.html  qgym.spaces.discrete.html  qgym.spaces.html  qgym.spaces.multi_binary.html  qgym.spaces.multi_discrete.html  qgym.templates.environment.html  (+16 more)
docs/.doctrees/: environment.pickle  index.doctree  qgym.custom_types.doctree  qgym.doctree  qgym.envs.doctree  qgym.envs.initial_mapping.doctree  qgym.envs.initial_mapping.initial_mapping.doctree  qgym.envs.initial_mapping.initial_mapping_rewarders.doctree  qgym.envs.initial_mapping.initial_mapping_state.doctree  qgym.envs.initial_mapping.initial_mapping_visualiser.doctree  qgym.envs.routing.doctree  qgym.envs.routing.routing.doctree  qgym.envs.routing.routing_rewarders.doctree  qgym.envs.routing.routing_state.doctree  qgym.envs.routing.routing_visualiser.doctree  qgym.envs.scheduling.doctree  qgym.envs.scheduling.machine_properties.doctree  qgym.envs.scheduling.rulebook.doctree  qgym.envs.scheduling.scheduling.doctree  qgym.envs.scheduling.scheduling_dataclasses.doctree  qgym.envs.scheduling.scheduling_rewarders.doctree  qgym.envs.scheduling.scheduling_state.doctree  qgym.envs.scheduling.scheduling_visualiser.doctree  qgym.generators.circuit.doctree  qgym.generators.doctree  qgym.generators.graph.doctree  qgym.generators.interaction.doctree  qgym.spaces.box.doctree  qgym.spaces.dict.doctree  qgym.spaces.discrete.doctree  qgym.spaces.doctree  qgym.spaces.multi_binary.doctree  qgym.spaces.multi_discrete.doctree  qgym.templates.doctree  qgym.templates.environment.doctree  qgym.templates.rewarder.doctree  qgym.templates.state.doctree  qgym.templates.visualiser.doctree  qgym.utils.doctree  qgym.utils.gate_encoder.doctree  (+7 more)
docs/_modules/: index.html
docs/_sources/: index.rst.txt  qgym.custom_types.rst.txt  qgym.envs.initial_mapping.initial_mapping.rst.txt  qgym.envs.initial_mapping.initial_mapping_rewarders.rst.txt  qgym.envs.initial_mapping.initial_mapping_state.rst.txt  qgym.envs.initial_mapping.initial_mapping_visualiser.rst.txt  qgym.envs.initial_mapping.rst.txt  qgym.envs.routing.routing.rst.txt  qgym.envs.routing.routing_rewarders.rst.txt  qgym.envs.routing.routing_state.rst.txt  qgym.envs.routing.routing_visualiser.rst.txt  qgym.envs.routing.rst.txt  qgym.envs.rst.txt  qgym.envs.scheduling.machine_properties.rst.txt  qgym.envs.scheduling.rst.txt  qgym.envs.scheduling.rulebook.rst.txt  qgym.envs.scheduling.scheduling.rst.txt  qgym.envs.scheduling.scheduling_dataclasses.rst.txt  qgym.envs.scheduling.scheduling_rewarders.rst.txt  qgym.envs.scheduling.scheduling_state.rst.txt  qgym.envs.scheduling.scheduling_visualiser.rst.txt  qgym.generators.circuit.rst.txt  qgym.generators.graph.rst.txt  qgym.generators.interaction.rst.txt  qgym.generators.rst.txt  qgym.rst.txt  qgym.spaces.box.rst.txt  qgym.spaces.dict.rst.txt  qgym.spaces.discrete.rst.txt  qgym.spaces.multi_binary.rst.txt  qgym.spaces.multi_discrete.rst.txt  qgym.spaces.rst.txt  qgym.templates.environment.rst.txt  qgym.templates.rewarder.rst.txt  qgym.templates.rst.txt  qgym.templates.state.rst.txt  qgym.templates.visualiser.rst.txt  qgym.utils.gate_encoder.rst.txt  qgym.utils.input_parsing.rst.txt  qgym.utils.input_validation.rst.txt  (+6 more)
docs_files/: make_docs.py
docs_files/templates/: conf.py_t  root_doc.rst_t
env/: mapping_environment.py
include/: qgym  qgym.h
include/qgym/: api.h  mapping.h
include/rl_ql/: api.h  mapping.h
notebooks/: COMPLETED_mapping_qubits.ipynb  COMPLETED_maze_runner.ipynb  COMPLETED_routing.ipynb  COMPLETED_scheduling_operations.ipynb  EMPTY_mapping_qubits.ipynb  EMPTY_maze_runner.ipynb  EMPTY_routing.ipynb  EMPTY_scheduling_operations.ipynb  Escaping_the_maze.ipynb  README.md  escaping_the_maze.ipynb  mapping_qubits.ipynb  maze_runner.ipynb  scheduling_operations.ipynb
python/: CMakeLists.txt  python_lib.py  qgym.i
python/compat/: fix-swig-cmdline.py
python/qgym/: __init__.py  custom_types.py  environment.py  rewarder.py
qgym/: CMakeLists.txt  __init__.py  _visualiser.py  custom_types.py  environment.py  rewarder.py  space.py  state.py  utils.py  visualiser.py
qgym/benchmarks/: __init__.py  benchmark_result.py
qgym/envs/: __init__.py  initial_mapping.py  initial_mapping_rewarders.py  initial_mapping_visualiser.py  mapping_environment.py  scheduling.py  scheduling_rewarders.py  scheduling_visualiser.py
qgym/generators/: __init__.py  circuit.py  graph.py  interaction.py  qiskit_circuit.py
qgym/io/: __init__.py  utils.py  (+2 more)
scraps/: model_based_mapping.py
stubs/: environment.py  model_based_mapping.py
(+155 files in other folders)
