[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgym"
authors = [{ name = "QuTech (TNO, TU Delft)"}]
maintainers = [{ name = "QuTech (TNO, TU Delft)"}]
description = "Reinforcement Learning Gym for Quantum Compilation"
classifiers =[
    "License :: OSI Approved :: Apache Software License",
    "Private :: Do Not Upload to pypi server",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords =[
    "Reinforcement Learning",
    "QuTech",
    "TNO",
    "TU Delft",
    "Quantum",
    "Gym",
    "Quantum Compilation",
]
dependencies = [
    "gymnasium>=0.28.1",
    "networkx[default]>=2.6.3",
    "numpy>=1.21.6, !=2.2.0",
    "pygame",
    "qiskit>=1.0.0",
]
dynamic = ["version"]


[project.optional-dependencies]
tutorial = [
    "matplotlib",
    "notebook",
    "stable-baselines3>=2.0.0",
]
test = [
    "pytest",
    "stable-baselines3>=2.0.0",
    "scipy>=1.7.3",
]
dev = [
    "ruff",
    "matplotlib",
    "notebook",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-math-dollar",
    "sphinx-rtd-theme",
    "stable-baselines3>=2.0.0",
    "mypy",
    "scipy>=1.7.3",
]

[tool.setuptools.packages.find]
include = ["qgym*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "qgym.__version__"}

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
strict = true
ignore_missing_imports = true
show_error_context = true
install_types = true
disallow_subclassing_any = false

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["*.ipynb"]

[tool.ruff.lint]
preview = true
select = [
    "A", # flake8-builtins
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "COM", #flake8-commas
    "C4", #flake8-comprehensions
    "C90", # mccabe
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle (error)
    "ERA", # eradicate
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F", # Pyflakes
    "FA", # flake8-future-annotations
    "FBT", # flake8-boolean-trap
    "FIX", # flake8-fixme
    "FLY", # flynt
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "N", # pep8-naming
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "PERF", # Perflint
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "FURB", # refurb
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "RUF022",
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "TCH", # flake8-type-checking
    "PL", # pylint
    "TRY", # tryceratops
    "T20", # flake8-print
    "T100", # flake8-debugger
    "UP", # pyupgrade
    "W", # pycodestyle (warning)
    "Q", # flake8-quotes
    "YTT", # flake8-2020
]
ignore = [
    "A005", # module shadowing a Python builtin module
    "ANN401", # typing.Any can be useful (for example in __eq__)
    "COM812", # Conflicts with ruff format
    "ISC001", # Possible conflicts with ruff format
    "W605", # deprecated in Python 3.6
    "PLW1641", # We don't need every class to be hashable
    "PLW2901", # Many false positives
    "PLR2004", # False positives when checking matrix dimensions (bloats gates)
    "PLW3201", # __array__ has a special meaning when numpy is installed
]
isort.combine-as-imports = true
pydocstyle.convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"qgym/utils/input_validation.py" = [
    "PLR0913" # Too many arguments allowed in input parsing
]
"*.py" = ["S101"] # asserts allowed everywhere
"tests/**/*.py" = [
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "D", # No doc requirements in tests
    "SLF001", # Testing private functions is OK
    "PLR2004", # Magic value allowed in tests
    "PLR6301", # Allowed in tests
]
"check_*.py" = ["SLF001"] # Checking private functions is OK