[metadata]
name = qgym
author = QuTech (TNO, TU Delft)
maintainer = QuTech (TNO, TU Delft)
description = Reinforcement Learning Gym for OpenQL
classifiers =
    License :: OSI Approved :: Apache Software License
    Private :: Do Not Upload to pypi server
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7,<3.10
keywords =
    Reinforcement Learning
    QuTech
    TNO
    TU Delft
    Quantum
    Gym
    Quantum Compilation
version = attr: qgym.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    qgym
    qgym.envs
    qgym.envs.initial_mapping
    qgym.envs.scheduling
    qgym.spaces
    qgym.templates
    qgym.utils
zip_safe = False
install_requires =
    gym~=0.19.0
    networkx[default]~=2.7.1
    numpy~=1.22.3
    pygame~=2.1.2
    scipy~=1.8.0

[options.package_data]
qgym = py.typed

[options.extras_require]
tutorial =
    matplotlib~=3.5.3
    notebook
    stable-baselines3~=1.4.0
dev =
    black
    isort
    matplotlib~=3.5.3
    notebook
    pytest
    sphinx
    sphinx-autodoc-typehints
    sphinx-math-dollar
    sphinx-rtd-theme~=1.0
    stable-baselines3~=1.4.0
	mypy
    pylint

