[metadata]
name = qgym
author = QuTech (TNO, TU Delft)
maintainer = QuTech (TNO, TU Delft)
description = Reinforcement Learning Gym for OpenQL
classifiers =
    License :: OSI Approved :: Apache Software License
    Private :: Do Not Upload to pypi server
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7,<3.10
keywords =
    Reinforcement Learning
    QuTech
    TNO
    TU Delft
    Quantum
    Gym
    Quantum Compilation
version = attr: qgym.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    qgym
    qgym.envs
    qgym.envs.initial_mapping
    qgym.envs.scheduling
    qgym.envs.routing
    qgym.spaces
    qgym.templates
    qgym.utils
zip_safe = False
install_requires =
    gym==0.21.0 # Fixed due to compatibility issues with stable-baselines3
    networkx[default]>=2.6.3
    numpy>=1.21.6
    pygame

[options.package_data]
qgym = py.typed

[options.extras_require]
tutorial =
    matplotlib
    notebook
    stable-baselines3~=1.8.0
test =
    pytest
    stable-baselines3~=1.8.0
    scipy>=1.7.3
dev =
    black
    isort
    matplotlib
    notebook
    pytest
    sphinx
    sphinx-autodoc-typehints
    sphinx-math-dollar
    sphinx-rtd-theme~=1.0
    stable-baselines3~=1.8.0
    mypy
    pylint
    scipy>=1.7.3

